added events/my endpoint
